# oxide-gui

./: Cargo.toml  LICENSE  README.md
crates/oxide-gui-core/: Cargo.toml
crates/oxide-gui-core/src/: backend.rs  canvas.rs  color.rs  event.rs  font.rs  lib.rs  oxide_os_integration.rs
crates/oxide-gui-linux/: Cargo.toml
crates/oxide-gui-linux/examples/: hello_window.rs  widgets_demo.rs
crates/oxide-gui-linux/src/: backend.rs  lib.rs
