[workspace]
members = [
    "crates/oxide-gui-core",
    "crates/oxide-gui-linux",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Surendra Shukla <surendra.shukla29@gmail.com>"]
license     = "MIT"
repository  = "https://github.com/shukla-surendra/oxide-gui"
homepage    = "https://github.com/shukla-surendra/oxide-gui"
